Batch call for retrieving blobs from RPC